--- a/src/style.css
+++ b/src/style.css
@@ -1,97 +1,173 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=Jost&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.app {
+  --num-textual-infos: 2;
+  --textual-info-height: 32px;
+  --toolbar-height: 96px;
+  position: fixed;
+  inset: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  font-family: "Jost", sans-serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.textual-info {
+  margin: 0;
+  padding: 0 16px;
+  height: var(--textual-info-height);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.clock {
+  display: flex;
+  justify-content: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
+.face {
+  --size: calc(
+    100vmin - var(--num-textual-infos) * var(--textual-info-height) -
+      var(--toolbar-height)
+  );
+  --tick-from: calc(50% - var(--size) / 180);
+  --tick-to: calc(50% + var(--size) / 180);
+  position: relative;
+  box-sizing: border-box;
+  width: var(--size);
+  height: var(--size);
+  max-width: 1000px;
+  max-height: 1000px;
+  border-radius: 50%;
+  border: calc(var(--size) / 90) solid black;
+  background: linear-gradient(45deg, black, transparent),
+    radial-gradient(circle at center, white 0, white 69%, transparent 69%),
+    linear-gradient(
+      0deg,
+      transparent,
+      transparent var(--tick-from),
+      black var(--tick-from),
+      black var(--tick-to),
+      transparent var(--tick-to)
+    ),
+    linear-gradient(
+      30deg,
+      transparent,
+      transparent var(--tick-from),
+      black var(--tick-from),
+      black var(--tick-to),
+      transparent var(--tick-to)
+    ),
+    linear-gradient(
+      60deg,
+      transparent,
+      transparent var(--tick-from),
+      black var(--tick-from),
+      black var(--tick-to),
+      transparent var(--tick-to)
+    ),
+    linear-gradient(
+      90deg,
+      transparent,
+      transparent var(--tick-from),
+      black var(--tick-from),
+      black var(--tick-to),
+      transparent var(--tick-to)
+    ),
+    linear-gradient(
+      120deg,
+      transparent,
+      transparent var(--tick-from),
+      black var(--tick-from),
+      black var(--tick-to),
+      transparent var(--tick-to)
+    ),
+    linear-gradient(
+      150deg,
+      transparent,
+      transparent var(--tick-from),
+      black var(--tick-from),
+      black var(--tick-to),
+      transparent var(--tick-to)
+    );
 }
 
-.card {
-  padding: 2em;
+.direction {
+  position: absolute;
+  height: 50%;
+  left: 50%;
+  transform-origin: center bottom;
+  transform: translateX(-50%) rotate(var(--rotation));
 }
 
-.read-the-docs {
-  color: #888;
+.number {
+  transform: rotate(calc(-1 * var(--rotation)));
+  font-size: calc(var(--size) / 8);
+  color: white;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+.hand {
+  z-index: 1;
+}
+
+.hours-hand {
+  --rotation: 26deg;
+  width: calc(var(--size) / 45);
+  background: linear-gradient(to top, black, black 65%, transparent 65%);
+}
+
+.minutes-hand {
+  --rotation: 56deg;
+  width: calc(var(--size) / 90);
+  background: linear-gradient(to top, black, black 90%, transparent 90%);
+}
+
+.seconds-hand {
+  width: calc(var(--size) / 180);
+  background: linear-gradient(to top, black, black 80%, transparent 80%);
+}
+
+.hand-center {
+  z-index: 1;
+  position: absolute;
+  width: calc(var(--size) / 25);
+  height: calc(var(--size) / 25);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background: black;
+}
+
+.toolbar {
+  height: var(--toolbar-height);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.button {
+  height: 48px;
+  padding: 0 16px;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: white;
   font-family: inherit;
-  background-color: #1a1a1a;
+  font-size: 16px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  opacity: 0.75;
+  border-radius: 8px;
+  transition: opacity 0.2s;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.button:hover {
+  opacity: 1;
+}
+
+.time-shift {
+  min-width: 40px;
+  text-align: center;
 }
